<resources>
    <string name="app_name">CancerMonitorApp</string>
    <string name="InfoLungCancerTitle">Lung Cancer</string>
    <string name="InfoLungCancerContent">
        "Lung Cancer is among the most well-known variant of cancer, reputed for its lethality and frequency.

        Lungs are a pair of organs that is central for a person to live, allowing a person to breathe. As such, symptoms of lung cancer causes victims to constantly cough- in later stages coughing blood or spit, chest pains, breathing problems, tiredness and many others.

        Cases of lung cancer are commonly caused by inhalation of cigarette smoke- directly or indirectly. Avoiding cigarette smoke inhalation is very important to prevent lung cancer development. Other smokes, like pipe and cigar, are also capable of causing lung cancer, although not as efficient as cigarettes.

        Another cause of lung cancer is exposure to asbestos, a material that was once very popular for its versatility. Asbestos has been banned in many countries due to its harmful side-effects, and in other countries it is tightly regulated.
        Lung cancer can also occur with exposure to radon gas, an invisible and odorless radioactive gas that can travel through drainage pipes, building foundations and many more. Radon can contaminate your home, but simple test kits can detect the presence of this gas.
        Exposure to black smoke like motor exhausts and polluted air should be avoided as best as you can.

        Lung cancers have two types, differentiated by their cell structure: small cells (SCLC) and non-small cells (NSCLC). They spread and function differently, so distinction between the two are important. SCLC occur 1/5ths of lung cancer cases, and is the most aggressive and rapid of the two. NSCLC are more common, and can be further categorised based on the cells its tumors cause. Note that types other than SCLC or NSCLC can occur, but are very rare.

        Treatment of lung cancer usually involve surgery, chemotherapy, radiaton therapy or any combination thereof. The decision involving which treatment to peruse or utilize depends on a case-by-case basis, factored by the patient's location and extent of the tumor, as well as current health condition.

        Therapy can be prescribed to help cure the cancer or alleviate the sufferer's pain. Multiple threapies can be given to the victim.

        Sources:
        https://www.cancer.gov/types/lung
        http://www.medicinenet.com/lung_cancer/article.htm"
    </string>
    <string name="InfoBladderCancerTitle">Bladder Cancer</string>
    <string name="InfoBladderCancerContent">
        "Bladder Cancer is characterised by blood in urine- which can be visible or microscopic, pain while urinating, increased frequency in the need to urinate, as well as an onset of urinary tract infections. Bladder refers to the organ in the pelvis that collect urine- waste liquid from the kidneys- before disposing it trough urinating.

        Smoking is a major factor for causing bladder cancer. Avoid inhaling smoke from smoking cigarettes or breathing cigarette vapor. Certain chemicals used in industries and manufactories called 'aromatic amines' can cause these kinds of cancer. These chemicals are often used in making dyes, and can be found in producers of rubber, leather, textiles, paint and printing industries. Using these products may also factor. Diesel fumes, used in trucks, can affect you too.

        Several types of cancer originate in the bladder, but Urothelial carcinoma or transitional cell carcinoma are by far the most common type to occur. Other cancer types can occur, but this type is the most common.\n\n

        Treatment options for bladder cancer are surgeries, intravesical therapy, chemotherapy, radiation therapy and immunotherapy. Depending on your health and the stage of the cancer, it might involve multiple treatment options.

        Sources:
        http://www.emedicinehealth.com/bladder_cancer/article_em.htm
        https://www.cancer.org/cancer/bladder-cancer/about/what-is-bladder-cancer.html"
    </string>
    <string name="InfoColorectalTitle">Colorectal Cancer</string>
    <string name="InfoColorectalContent">
        "Colorectal cancer originates in the colon or rectum. The colon and rectum are the lower parts of the large intestine,
        Colorectal cancer may cause rectal bleeding, diarrhea, constipation, belly pain, etc.

        Colorectal cancer have several risk factors- these include obesity, physical inactivity, meaty diet, smoking, alcohol and such factor in the chances of colorectal cancer.

        Colorectal cancer usually begin as a small growth called a 'polyp' in either the colon or rectum. Some of these polyps grow into tumors, which are what we directly refer to colorectal cancer.
        Removal of these polyps help in treating cancer- either by surgical means or other therapies.

        As stated earlier, treatment of colorectal cancer may involve surgically removing cancerous masses, but depending on your health status, your specialist may provide you with other alternatives, like chemotherapy.

        Sources:
        https://www.cancer.org/cancer/colon-rectal-cancer
        https://www.cancer.gov/types/colorectal"
    </string>
    <string name="InfoBreastTitle">Breast Cancer</string>
    <string name="InfoBreastContent">
        "Breast cancer can affect males and is not exclusive to females. Breast cancer simply means that the cancerous cells originate from your breast tissue- males have less of these in their chest, but they do have them. This is why females encounter breast cancer more than men, but men can be affected too.
        Breast cancer oftentimes develop as tumors that can be seen via X-ray or felt as a lump. Most of the symptoms caused by breast cancer is usually visible and can be noticed, but be aware that other diseases may also cause the same symptoms.

        As common and widespread breast cancer is, there are some risk factors that scientists have identified, and some that has been debunked- be aware that some risk factors that has been tauted as a cause for breast cancer has been debunked, and due to the nature of breast cancer, there are many false statements around the 'net. It is advised reconfirm your searches and doublecheck with a specialist. Check your sources.
        Common risk factors like obesity, alcohol consumption and physical activity applies to breast cancer. Specific risk factors would need to be discussed with your specialist.

        Breast cancer can develop as multiple categories. Unfortunately, there are several different types that are unique to itself and categorizing them are difficult, as such, it might be easier to focus on the one you are directly concerned with and discuss with your expert.
        Searching online for yourself may help greatly, due to the sheer number of variety and structure.

        Most common treatment for breast cancer is a surgical removal of developed tumors. Depending on it's progression and type, it may need other treatments in conjunction. The treatment also needs to factor in your health condition and personal choice too.

        Sources:
        http://www.breastcancer.org/symptoms/types
        https://www.cancer.org/cancer/breast-cancer.html
        https://www.cancer.gov/types/breast
        http://www.cancerresearchuk.org/about-cancer/breast-cancer"
    </string>
    <string name="InfoThyroidTitle">Thyroid Cancer</string>
    <string name="InfoThyroidContent">
        "The thyroid is an organ at the neck, shaped like a butterfly. It produces hormones that regulate most bodily functions, such as heart rate, digestion and muscle control. Thyroid uses iodine consumed to operate.
        Thypoid cancer usually manifests as a swelling in the neck- tumors from the cancerous masses, followed with pain in the throat or neck. Difficulty swallowing and breathin is also an effect of this swelling.

        Thypoid cancer has a definitive risk factor with radiation exposure- a rare situation, save for specific medical treatments or catastrophic incidents. Other risk factors cannot be helped- it is either inherent or a side effect of extenuating circumstances.
        Abnormal iodine intake- either too much or too little- may also trigger this mutation. Iodine can be found in some salts and specific foods.

        Thyroid cancer is split into four categories: papillary, follicular, medullary, and anaplastic.
        Papillary: Most commonly occuring. Spreads to surrounding lymph nodes, but are generally treatable.
        Follicular: Second most common. More likely to spread into major organs than to surrounding areas. Somewhat aggressive.
        Medullary: Spreads to surroundings, but are quite aggressive. Condition can be detected through blood tests.
        Anaplastic: Very aggresive and spreads to other organs. Very rare occurrences.

        It is possible for Thyroid cancer to recur as second cancer.

        Sources:
        https://www.cancer.gov/types/thyroid
        http://www.cancercenter.com/thyroid-cancer
        http://www.webmd.com/cancer/tc/thyroid-cancer"
    </string>
    <string name="InfoProstateTitle">Prostate Cancer</string>
    <string name="InfoProstateContent">
        "The prostate is a gland contained near the lower large intestine, near the rectum. The prostate is part of the reproductive system and indirectly supports reproduction.
        Due to anatomical differences, prostate cancer is rare in females. This is because the anatomy of prostate glands in females are different than that of males. As such, prostate cancer occurs mostly in males, but females also have a small possibility of it occuring.
        Prostate cancer does not showcase any overt, threatening symptoms until later stages. Early prostate cancer are hard to detect and is easily unnoticable.
        Be aware that untreated prostate cancer may cause death- but there are plenty who have survived prostate cancer.

        Treatment options usually include watch-and-wait, surgery, chemotherapy and radiotherapy, among other therapies.

        Due to the nature of this cancer, it is advised to discuss with your specialist about the details of your specific strain of cancer.

        Sources:
        http://www.nhs.uk/conditions/Cancer-of-the-prostate/Pages/Introduction.aspx
        https://www.cancer.gov/types/prostate
        http://www.medicinenet.com/prostate_cancer/article.htm"
    </string>
    <string name="InfoUterineTitle">Uterine Cancer</string>
    <string name="InfoUterineContent">
        "Uterine Cancer affects the uterus- an organ that is exclusive to females and is integral to reproduction- It is the organ that develops newborn fetuses.
        Uterine cancer usually manifests in vaginal bleeding.

        Known risk factors for uterine cancer include side-effect from radiotherapy to the pelvic region, some medications like tamoxifen and sole consumption of estrogen.

        Uterine cancer is divided into two categories, depending in its formation.
        Endometrial cancer affects the internal regions of the utero. This cancer type can usually be neutralized.
        Uterine sarcoma is an uncommon form of uterine cancer. It forms in the muscle and tissue that support the uterus, and is more difficult to treat.

        Some common treatments for this cancer include surgery, radiation, hormone therapy and chemotherapy. Consult your doctor for other potential alternatives.

        Sources:
        http://www.medicinenet.com/uterine_cancer/article.htm
        https://www.cancer.gov/types/uterine"
    </string>
</resources>