<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shankarenfo.cancermonitorapp.PatientInfoPelvis"
    android:padding="20dp"
    android:background="@drawable/bgp_bluegreypattern">

    <!-- this is the xml to select specific cancer types, based on the Cervical region. -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_pitypes">

        <TextView
            android:text="Pelvic Region"
            android:background="#e572e3ff"
            android:padding="4dp"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/InfoBladderCancerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pivBladderC"/>

        <Button
            android:text="@string/InfoColorectalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pivColorectal" />

        <Button
            android:text="@string/InfoProstateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pivProstate" />

        <Button
            android:text="@string/InfoUterineTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pivUterine" />
    </LinearLayout>

    <!-- the information containers of specific types of cancer, selected from menu -->
    <LinearLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:background="#e572e3ff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_pivariantBladderC">

        <Button
            android:text="Back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pivariantBladderCBack" />

        <TextView
            android:text="@string/InfoBladderCancerTitle"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textColor="#000000"/>

        <TextView
            android:text="TextView"
            android:textSize="3dp"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:fillViewport="true">
            <TextView
                android:text="@string/InfoBladderCancerContent"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_weight="1"/>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:background="#e572e3ff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_pivariantColorectal">

        <Button
            android:text="Back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pivariantColorectalBack" />

        <TextView
            android:text="@string/InfoColorectalTitle"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textColor="#000000"/>

        <TextView
            android:text="TextView"
            android:textSize="3dp"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:fillViewport="true">
            <TextView
                android:text="@string/InfoColorectalContent"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_weight="1"/>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:background="#e572e3ff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_pivariantProstate">

        <Button
            android:text="Back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pivariantProstateBack" />

        <TextView
            android:text="@string/InfoProstateTitle"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textColor="#000000"/>

        <TextView
            android:text="TextView"
            android:textSize="3dp"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:fillViewport="true">
            <TextView
                android:text="@string/InfoProstateContent"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_weight="1"/>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:background="#e572e3ff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_pivariantUterine">

        <Button
            android:text="Back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pivariantUterineBack" />

        <TextView
            android:text="@string/InfoUterineTitle"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textColor="#000000"/>

        <TextView
            android:text="TextView"
            android:textSize="3dp"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:fillViewport="true">
            <TextView
                android:text="@string/InfoUterineContent"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_weight="1"/>
        </ScrollView>
    </LinearLayout>

</FrameLayout>
