<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shankarenfo.cancermonitorapp.PatientInfoThorax"
    android:padding="20dp"
    android:background="@drawable/bgp_bluegreypattern">

    <!-- this is the xml to select specific cancer types, based on the Thorax. -->
    <LinearLayout
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_pitypes">

        <TextView
            android:text="Thorax"
            android:background="#e572e3ff"
            android:padding="4dp"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/InfoLungCancerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pivLungC"/>

        <Button
            android:text="@string/InfoBreastTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pivBreast" />

        <Button
            android:text="@string/InfoThyroidTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pivThyroid" />

    </LinearLayout>

    <!-- the information containers of specific types of cancer, selected from menu -->
    <LinearLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:background="#e572e3ff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_pivariantLungC">

        <Button
            android:text="Back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pivariantLungCBack" />

        <TextView
            android:text="@string/InfoLungCancerTitle"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textColor="#000000" />

        <TextView
            android:text="TextView"
            android:textSize="3dp"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:fillViewport="true">
            <TextView
                android:text="@string/InfoLungCancerContent"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_weight="1"/>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:background="#e572e3ff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_pivariantBreast">

        <Button
            android:text="Back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pivariantBreastBack" />

        <TextView
            android:text="@string/InfoBreastTitle"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textColor="#000000" />

        <TextView
            android:text="TextView"
            android:textSize="3dp"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:fillViewport="true">
            <TextView
                android:text="@string/InfoBreastContent"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_weight="1"/>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:background="#e572e3ff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_pivariantThyroid">

        <Button
            android:text="Back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_pivariantThyroidBack" />

        <TextView
            android:text="@string/InfoThyroidTitle"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textColor="#000000" />

        <TextView
            android:text="TextView"
            android:textSize="3dp"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:fillViewport="true">
            <TextView
                android:text="@string/InfoThyroidContent"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_weight="1"/>
        </ScrollView>

    </LinearLayout>

</FrameLayout>
